# speechbridge

./: .gitignore  NEPALI_TRANSCRIPTION_FEATURE.md  README.md  app.py  audio_chunker.py  audio_cleaner.py  pyproject.toml  requirements.txt  transcription.txt
.emergent/: emergent.yml
notebooks/: 01_transcription_demo.ipynb  continue_nepali_finetuning.ipynb  finetuning_for_bilingual_transcription.ipynb  finetuning_for_nepali.ipynb  summarization.ipynb  transcription_using_transformers.ipynb  translation.ipynb
templates/: index.html
webapp/: app.py  auth.py  database.py  summarizer.py  transcription.py
webapp/static/: style.css  transcription.js
webapp/templates/: base.html  dashboard.html  index.html  login.html  register.html  transcribe_english.html  transcribe_nepali.html
