[project]
name = "speechbridge"
version = "0.1.0"
description = "Speech-to-text, translation, and processing app"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "ffmpeg-python",
    "pandas",
    "tqdm",
    "noisereduce",
    "librosa",
    "soundfile",
    "jiwer",
    "sentencepiece",
    "transformers",
    "flask",
    "openai-whisper>=20250625",
    "moviepy>=2.2.1",
    "langdetect>=1.0.9",
]

[tool.uv]
# Optional: define settings for uv if needed
