[project]
name = "speechbridge"
version = "0.1.0"
description = "Speech-to-text, translation, and processing app"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "ffmpeg-python",
    "pandas",
    "tqdm",
    "noisereduce",
    "librosa",
    "soundfile",
    "jiwer",
    "sentencepiece",
    "transformers",
    "flask",
    "openai-whisper>=20250625",
    "moviepy>=2.2.1",
    "langdetect>=1.0.9",
    "pydub>=0.25.1",
    "pyxlsb>=1.0.10",
    "datasets>=4.4.1",
]

[tool.uv]
# Optional: define settings for uv if needed
